@@ -7,7 +7,6 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Nested;
 import org.junit.jupiter.api.Test;
 
-import java.math.BigDecimal;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -27,19 +26,19 @@ class OrderTest {
             // given
             OrderItem item1 = OrderItem.create(product, 1, 1000);
             OrderItem item2 = OrderItem.create(product, 1, 2000);
-            DiscountedOrderByCoupon discountedOrderByCoupon = new DiscountedOrderByCoupon(
-                    1L,
-                    BigDecimal.valueOf(1500) // 할인 후 가격 1500원
-            );
+            List<OrderItem> items = List.of(item1, item2);
+            int itemsPrice = items.stream().mapToInt(item -> item.getPrice() * item.getQuantity()).sum();
+            int discountAmount = 500;
+            int totalPrice = Math.max(0, itemsPrice - discountAmount);
 
             // when
-            Order order = Order.place(user, List.of(item1, item2), discountedOrderByCoupon);
+            Order order = Order.place(user, items, totalPrice, 1L);
 
             // then
             assertAll(
                     () -> assertEquals(user, order.getUser()),
                     () -> assertEquals(2, order.getOrderItems().size()),
-                    () -> assertEquals(BigDecimal.valueOf(1500), order.getTotalPrice()),
+                    () -> assertEquals(2500, order.getTotalPrice()),
                     () -> assertEquals(OrderStatus.PENDING, order.getStatus()),
                     () -> assertNotNull(order.getPaidAt())
             );
@@ -48,14 +47,8 @@ class OrderTest {
         @DisplayName("주문 아이템이 null이면 예외가 발생한다.")
         @Test
         void throwsException_whenItemsNull() {
-            // given
-            DiscountedOrderByCoupon discountedOrderByCoupon = new DiscountedOrderByCoupon(
-                    1L,
-                    BigDecimal.valueOf(1500) // 할인 후 가격 1500원
-            );
-
             // when & then
-            assertThrows(IllegalArgumentException.class, () -> Order.place(user, null, discountedOrderByCoupon));
+            assertThrows(NullPointerException.class, () -> Order.place(user, null, 500, 1L));
         }
 
         @DisplayName("주문 사용자(User)가 null이면 예외가 발생한다.")
@@ -63,28 +56,43 @@ class OrderTest {
         void throwsException_whenUserIsNull() {
             // given
             OrderItem item = OrderItem.create(product, 1, 1000);
-            DiscountedOrderByCoupon discountedOrderByCoupon = new DiscountedOrderByCoupon(
-                    1L,
-                    BigDecimal.valueOf(500) // 할인 후 가격 500원
-            );
+            List<OrderItem> items = List.of(item);
+            int itemsPrice = items.stream().mapToInt(i -> i.getPrice() * i.getQuantity()).sum();
+            int discountAmount = 500;
+            int totalPrice = Math.max(0, itemsPrice - discountAmount);
 
             // when & then
-            assertThrows(NullPointerException.class, () -> Order.place(null, List.of(item), discountedOrderByCoupon));
+            assertThrows(NullPointerException.class, () -> Order.place(null, items, totalPrice, 1L));
         }
 
         @DisplayName("주문 아이템이 빈 리스트이면 예외가 발생한다.")
         @Test
         void throwsException_whenItemsEmpty() {
-            // given
-            DiscountedOrderByCoupon discountedOrderByCoupon = new DiscountedOrderByCoupon(
-                    1L,
-                    BigDecimal.valueOf(0) // 할인 후 가격 0원
-            );
-
             // when & then
-            assertThrows(IllegalArgumentException.class, () -> Order.place(user, List.of(), discountedOrderByCoupon));
+            assertThrows(NullPointerException.class, () -> Order.place(user, List.of(), 0, 1L));
         }
     }
+
+//    @DisplayName("updateOrder()")
+//    @Nested
+//    class UpdateOrder {
+//        @DisplayName("주문 정보를 정상적으로 수정한다.")
+//        @Test
+//        void success() {
+//            // given
+//            Order order = new Order();
+//            int newTotalPrice = 2000;
+//            Long newCouponId = 2L;
+//
+//            // when
+//            order.updateOrder(newTotalPrice, newCouponId);
+//
+//            // then
+//            assertEquals(newTotalPrice, order.getTotalPrice());
+//            assertEquals(OrderStatus.PENDING, order.getStatus());
+//            assertEquals(newCouponId, order.getCouponId());
+//        }
+//    }
 
 
     @DisplayName("addItem()")
@@ -103,7 +111,7 @@ class OrderTest {
 
             // then
             assertEquals(1, order.getOrderItems().size());
-            assertEquals(item, order.getOrderItems().get(0));
+            assertEquals(item, order.getOrderItems().getFirst());
         }
 
         @DisplayName("아이템이 null이면 예외가 발생한다.")
@@ -129,10 +137,10 @@ class OrderTest {
             Order order = new Order();
 
             // when
-            order.updateOrderStatus(OrderStatus.COMPLETE);
+            order.updateOrderStatus(OrderStatus.PAID);
 
             // then
-            assertEquals(OrderStatus.COMPLETE, order.getStatus());
+            assertEquals(OrderStatus.PAID, order.getStatus());
         }
 
         @DisplayName("null 상태로 업데이트하면 예외가 발생한다.")
